--- a/index.html
+++ b/index.html
@@ -61,25 +61,48 @@
 <body>
   <!-- Header -->
  <header id="header" style="background: #fff; box-shadow: 0px 2px 15px rgba(0, 0, 0, 0.1); position: fixed; top: 0; width: 100%; z-index: 999; padding: 15px 0;">
-        <div style="display: flex; justify-content: center; align-items: center;">
-         <h1 style="font-size: 24px; font-weight: bold; margin: 0; padding: 0; color: #e03a3c;">
-      <a href="index.html" style="text-decoration: none; color: inherit;">
-        Fourise <span style="color: #000;">Software Solutions Pvt. Ltd.</span>
-      </a>
-    </h1>
+    <div style="display: flex; justify-content: center; align-items: center;">
+        <h1 id="logoText" style="font-size: 24px; font-weight: bold; margin: 0; padding: 0; color: #e03a3c;">
+            <a href="index.html" style="text-decoration: none; color: inherit;">
+                Fourise <span style="color: #000;">Software Solutions Pvt. Ltd.</span>
+            </a>
+        </h1>
 
-          <nav style="margin-left: 50px;">
+        <nav style="margin-left: 50px;">
             <ul class="nav-menu" style="list-style: none; display: flex; margin: 0; padding: 0;">
-              <li class="nav-item" style="margin: 0 20px;"><a href="index.html" style="text-decoration: none; color: #111; font-size: 16px; font-weight: 500;">Home</a></li>
-              <li class="nav-item" style="margin: 0 20px;"><a href="about.html" style="text-decoration: none; color: #111; font-size: 16px; font-weight: 500;">About</a></li>
-              <li class="nav-item" style="margin: 0 20px;"><a href="services.html" style="text-decoration: none; color: #111; font-size: 16px; font-weight: 500;">Services</a></li>
-              <li class="nav-item" style="margin: 0 20px;"><a href="product.html" style="text-decoration: none; color: #111; font-size: 16px; font-weight: 500;">Product</a></li>
-              <li class="nav-item" style="margin: 0 20px;"><a href="contact.html" style="text-decoration: none; color: #111; font-size: 16px; font-weight: 500;">Contact</a></li>
-              <li class="nav-item" style="margin: 0 20px;"><a href="internship.html" style="text-decoration: none; color: #111; font-size: 16px; font-weight: 500;">Internship</a></li>
+                <li class="nav-item" style="margin: 0 20px;"><a href="index.html" style="text-decoration: none; color: #111; font-size: 16px; font-weight: 500;">Home</a></li>
+                <li class="nav-item" style="margin: 0 20px;"><a href="#about" style="text-decoration: none; color: #111; font-size: 16px; font-weight: 500;">About</a></li>
+                <li class="nav-item" style="margin: 0 20px;"><a href="services.php" style="text-decoration: none; color: #111; font-size: 16px; font-weight: 500;">Services</a></li>
+                <li class="nav-item" style="margin: 0 20px;"><a href="product.php" style="text-decoration: none; color: #111; font-size: 16px; font-weight: 500;">Product</a></li>
+                <li class="nav-item" style="margin: 0 20px;"><a href="contact.php" style="text-decoration: none; color: #111; font-size: 16px; font-weight: 500;">Contact</a></li>
+                <li class="nav-item" style="margin: 0 20px;"><a href="internship.php" style="text-decoration: none; color: #111; font-size: 16px; font-weight: 500;">Internship</a></li>
             </ul>
-          </nav>
-        </div>
+        </nav>
+    </div>
 </header>
+
+<script>
+    function adjustLogoFontSize() {
+        const logoText = document.getElementById("logoText");
+        if (!logoText) return; 
+
+        const screenWidth = window.innerWidth;
+
+        if (screenWidth <= 320) {
+            logoText.style.fontSize = "12px";  // Extra Small Screens
+        } else if (screenWidth <= 375) {
+            logoText.style.fontSize = "14px"; // Small Mobile Screens
+        } else if (screenWidth <= 425) {
+            logoText.style.fontSize = "16px"; // Mobile L
+        } else {
+            logoText.style.fontSize = "24px"; // Default for larger screens
+        }
+    }
+
+    window.addEventListener("load", adjustLogoFontSize);
+    window.addEventListener("resize", adjustLogoFontSize);
+</script>
+
 
 
 
