--- a/index.html
+++ b/index.html
@@ -83,28 +83,28 @@
 
 <script>
     function adjustLogoFontSize() {
-    const logoText = document.getElementById("logoText");
-    if (!logoText) return;
+        const logoText = document.getElementById("logoText");
+        if (!logoText) return;
 
-    const screenWidth = window.innerWidth;
+        const screenWidth = window.innerWidth;
 
-    // Align text to the left
-    logoText.style.textAlign = "left";
+        // Ensure logo is aligned to the left
+        logoText.style.textAlign = "left";
 
-    // Adjust font size based on screen width
-    if (screenWidth <= 320) {
-        logoText.style.fontSize = "12px";  // Extra Small Screens
-    } else if (screenWidth <= 375) {
-        logoText.style.fontSize = "14px"; // Small Mobile Screens
-    } else if (screenWidth <= 425) {
-        logoText.style.fontSize = "16px"; // Mobile L
-    } else {
-        logoText.style.fontSize = "24px"; // Default for larger screens
+        // Adjust font size based on screen width
+        if (screenWidth <= 320) {
+            logoText.style.fontSize = "12px";  // Extra Small Screens
+        } else if (screenWidth <= 375) {
+            logoText.style.fontSize = "14px"; // Small Mobile Screens
+        } else if (screenWidth <= 425) {
+            logoText.style.fontSize = "16px"; // Mobile L
+        } else {
+            logoText.style.fontSize = "24px"; // Default for larger screens
+        }
     }
-}
 
-window.addEventListener("load", adjustLogoFontSize);
-window.addEventListener("resize", adjustLogoFontSize);
+    window.addEventListener("load", adjustLogoFontSize);
+    window.addEventListener("resize", adjustLogoFontSize);
 
 </script>
   
