--- a/index.html
+++ b/index.html
@@ -3,8 +3,7 @@
 
 <head>
   <meta charset="utf-8">
-  <meta content="width=device-width, initial-scale=1.0" name="viewport">
-
+  <meta content="width=device-width, initial-scale=1.0, user-scalable=no" name="viewport">
   <title>Fourise Software Solution Pvt. Ltd.</title>
   <meta content="" name="description">
   <meta content="" name="keywords">
@@ -26,37 +25,38 @@
   <link href="assets/vendor/venobox/venobox.css" rel="stylesheet">
   <link href="assets/vendor/aos/aos.css" rel="stylesheet">
 
-
   <!-- Template Main CSS File -->
   <link href="assets/css/style.css" rel="stylesheet">
 
   <!-- Lottie Animation Library -->
-<script src="https://cdnjs.cloudflare.com/ajax/libs/bodymovin/5.7.6/bodymovin.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/bodymovin/5.7.6/bodymovin.min.js"></script>
 
-
-  <!-- =======================================================
-  * Template Name: Presento - v1.1.1
-  * Template URL: https://bootstrapmade.com/presento-bootstrap-corporate-template/
-  * Author: BootstrapMade.com
-  * License: https://bootstrapmade.com/license/
-  ======================================================== -->
   <style>
-  body {
-    overflow-x: hidden; /* Hides the horizontal scrollbar */
-    overflow-y: scroll; /* Keeps the vertical scroll functionality */
-    scrollbar-width: thin; /* For Firefox, to make the scrollbar thinner */
-  }
+    body {
+      overflow-x: hidden; /* Hides the horizontal scrollbar */
+      overflow-y: scroll; /* Keeps the vertical scroll functionality */
+      scrollbar-width: thin; /* For Firefox, to make the scrollbar thinner */
+    }
 
-  /* Optional: For Webkit browsers like Chrome/Safari */
-  ::-webkit-scrollbar {
-    width: 0px; /* Hides the scrollbar */
-  }
-  
-  ::-webkit-scrollbar-thumb {
-    background: transparent; /* Optional: Make the scrollbar thumb invisible */
-  }
-</style>
+    /* Optional: For Webkit browsers like Chrome/Safari */
+    ::-webkit-scrollbar {
+      width: 0px; /* Hides the scrollbar */
+    }
+    
+    ::-webkit-scrollbar-thumb {
+      background: transparent; /* Optional: Make the scrollbar thumb invisible */
+    }
+
+    /* Add media query for 425px screens */
+    @media (max-width: 425px) {
+        #logoText {
+            font-size: 12px !important;  /* Force font-size to 12px for screens <= 425px */
+            margin-left: -5px !important; /* Adjust margin-left */
+        }
+    }
+  </style>
 </head>
+
 
 <body>
   <!-- Header -->
@@ -96,17 +96,20 @@
     
     if (screenWidth <= 320) {
         fontSize = "14px";  // Extra Small Screens
-        marginLeft = "-5px"; // Extra Small Screens margin
+        marginLeft = "-20px"; // Extra Small Screens margin
     } else if (screenWidth <= 375) {
         fontSize = "16px"; // Small Mobile Screens
         marginLeft = "-8px"; // Small Mobile Screens margin
     } else if (screenWidth <= 425) {
         fontSize = "16px"; // Mobile L (Ensured to be 12px for 425px)
-        marginLeft = "-10px"; // Mobile L margin
+        marginLeft = "-5px"; // Mobile L margin
     } else {
         fontSize = "24px"; // Default for larger screens
         marginLeft = "0px"; // Default margin for larger screens
     }
+
+    // Log the font size and margin left values
+    console.log(`Font Size: ${fontSize}, Margin Left: ${marginLeft}`);
 
     // Apply font size
     if (logoText.style.fontSize !== fontSize) {
@@ -122,7 +125,7 @@
     // Adjust margin-top for .mobile-nav-toggle dynamically
     let marginTop;
     if (screenWidth <= 320) {
-        marginTop = "-20px";  // Extra Small Screens
+        marginTop = "-21px";  // Extra Small Screens
     } else if (screenWidth <= 375) {
         marginTop = "-30px";  // Small Mobile Screens
     } else if (screenWidth <= 425) {
@@ -138,7 +141,9 @@
 }
 
 // Apply styles immediately to prevent flickering issue
-document.addEventListener("DOMContentLoaded", adjustLogoAndNav);
+document.addEventListener("DOMContentLoaded", function() {
+    adjustLogoAndNav();
+});
 
 // Optimize event listeners with debounce
 function debounce(func, delay) {
@@ -150,6 +155,9 @@ function debounce(func, delay) {
 }
 
 window.addEventListener("resize", debounce(adjustLogoAndNav, 100));
+
+
+
 
 
 
